--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title>Myapp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= include_gon %>
     <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
     <script src="js/celeb-index.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all'%>
