--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,23 @@
       <%= image_tag @user.image, class: 'user-show-img'%>
       <div class='user-name'>
         <%= current_user.nickname %>
-        <%= link_to 'カード情報登録', cards_new_path %>
+      </div>
+      <div class="card-info">
+        <% unless @card %>
+            <%= link_to 'カード情報登録', cards_new_path %>
+        <% end %>
+        <div class="Card_title">
+          <p>○カード情報</p>
+        </div>
+        <div class="Card_info">
+          【カード番号】
+          <br>
+            <%= "**** **** **** " + @card[:last4] %>
+          <br>
+          【有効期限】
+          <br>
+            <%= @card[:exp_month] %>/<%= @card[:exp_year] %>
+        </div>
       </div>
     </div>
     <h2>新着メッセージ</h2>
