--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -4,19 +4,14 @@
   height: 500px;
 }
 
+/* left-bar */
+
 .left-bar{
   width: 35vw;
   background-color:  #00bfff;
   overflow-y: scroll;
   overflow-x: hidden;
-}
-
-.right-bar{
-  width: 65vw;
-  background-color: #87cefa;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  flex-wrap: wrap;
+  border-radius: 18px;
 }
 
 .user-show-profile{
@@ -57,7 +52,7 @@
   color: #5c98d4;
   font-weight: bold;
   font-size: 20px;
-
+  border-radius: 18px;
 }
 
 .left-bar h2:after {
@@ -71,7 +66,19 @@
   height: 0;
 }
 
-.chat-history{
+
+/* center-bar */
+
+.center-bar{
+  width: 35vw;
+  background-color: #87cefa;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  flex-wrap: wrap;
+  border-radius: 18px;
+}
+
+.center-bar h2{
   position: relative;
   padding: 0.5em 0.7em;
   margin: 2em 0;
@@ -79,9 +86,10 @@
   color: #5c98d4;
   font-weight: bold;
   font-size: 20px;
+  border-radius: 18px;
 }
 
-.chat-history:after {
+.center-bar h2:after {
   position: absolute;
   content: '';
   top: 100%;
@@ -90,28 +98,6 @@
   border-top: 15px solid #e6f4ff;
   width: 0;
   height: 0;
-}
-
-.celeb-show-main{
-  width: 100%;
-  background-color: #66cfff;
-  background-size: cover;
-  padding: 5vh 20vw;
-  height: 500px;
-}
-
-.celeb-show-content{
-  margin-bottom: 50px;
-}
-
-.celeb-profile{
-  display: flex;
-}
-
-.celeb-show-name{
-  margin-left: 30px;
-  font-size: 30px;
-  padding-top: 30px;
 }
 
 .user-comment-list{
@@ -131,4 +117,34 @@
 .chat-room-name:hover{
   color: blue;
   text-decoration:underline;
+}
+
+/* right-bar */
+
+.right-bar{
+  width: 30vw;
+  background-color: #66cfff;
+  border-radius: 18px;
+}
+
+.right-bar h2{
+  position: relative;
+  padding: 0.5em 0.7em;
+  background: #e6f4ff;
+  color: #5c98d4;
+  font-weight: bold;
+  font-size: 20px;
+  margin: 2em 0;
+  border-radius: 18px;
+}
+
+.right-bar  h2:after{
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 30px;
+  border: 15px solid transparent;
+  border-top: 15px solid #e6f4ff;
+  width: 0;
+  height: 0;
 }
