--- a/app/views/celebs/show.html.erb
+++ b/app/views/celebs/show.html.erb
@@ -42,14 +42,14 @@
       <% unless room.block %>
         <ul class='user-comment-list-1'>
           <li class='user-comment-1'>
-            <%# <%if room.user.order==true %>
+            <%# <%if room.messages.order ==  %> 
               <%# <p>🌟</p> %>
-              <%# <%= image_tag room.user.image, class: 'img1'%> %>
-              <%# <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name' %> %>
-            <%# <% else %> %> %>
+              <%# <%= image_tag room.user.image, class: 'img1' %> 
+              <%# <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name' %> 
+            <%# <% else %> 
               <%= image_tag room.user.image, class: 'img1'%>
               <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name' %>
-            <%# <% end %> %>
+            <%# <% end %> 
           </li>
         </ul> 
       <% end %>
