--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <div class='right-bar'>
+  <div class='center-bar'>
     <h2 class='chat-history'>トーク履歴</h2>
     <% @rooms.each do |room| %>
       <% unless room.messages.blank? %>
@@ -56,6 +56,18 @@
           </li>
         </ul>
       <% end %>
+    <% end %>
+  </div>
+
+  <div class='right-bar'>
+    <h2 class='like-celebs'>お気に入り</h2>
+    <% @likes.each do |like| %>
+      <ul class='user-comment-list'>
+        <li class='user-comment'>
+          <%= image_tag like.room.celeb.image, class: 'img1'%>
+          <%= link_to "#{like.room.celeb.name}さんとのトーク", room_path(like.room), class: 'chat-room-name' %>
+        </li>
+      </ul>
     <% end %>
   </div>
 </div> 
