--- a/app/views/celebs/show.html.erb
+++ b/app/views/celebs/show.html.erb
@@ -23,7 +23,7 @@
                       <%= image_tag message.user.image, class: 'img1' %>
                       <%= link_to "#{message.user.nickname}さん", room_path(message.room), class: 'chat-room-name' %>
                     <% else %>
-                      <%= image_tag message.user.image, class: 'img1', style: "margin-left: 20px;"%>
+                      <%= image_tag message.user.image, class: 'img1', style: "margin-left: 16px;"%>
                       <%= link_to "#{message.user.nickname}さん", room_path(message.room), class: 'chat-room-name' %>
                     <% end %>
                   </li>
@@ -42,14 +42,14 @@
       <% unless room.block %>
         <ul class='user-comment-list-1'>
           <li class='user-comment-1'>
-            <%# <%if room.messages.order ==  %> 
-              <%# <p>🌟</p> %>
-              <%# <%= image_tag room.user.image, class: 'img1' %> 
-              <%# <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name' %> 
-            <%# <% else %> 
-              <%= image_tag room.user.image, class: 'img1'%>
+            <%if room.user.order == true %> 
+              <p>🌟</p>
+              <%= image_tag room.user.image, class: 'img1'  %>
+              <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name'  %>
+            <% else  %>
+              <%= image_tag room.user.image, class: 'img1', style: "margin-left: 16px;"%>
               <%= link_to "#{room.user.nickname}さんとのトーク", room_path(room), class: 'chat-room-name' %>
-            <%# <% end %> 
+            <% end  %>
           </li>
         </ul> 
       <% end %>
