--- a/app/assets/stylesheets/room/show.scss
+++ b/app/assets/stylesheets/room/show.scss
@@ -44,6 +44,9 @@
   border-radius: 5px;
   padding-left: 220px;
 }
+.star:link ,:visited {
+  color: black;
+}
 .img1{
   width: 40px;
   height: 40px;
