カード情報登録画面の装飾

--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,18 +1,31 @@
-<%= form_with  url: cards_path, id: 'charge-form', class: 'card-form',local: true do |f| %>
-  <div class="Cardpage">
-    <h1>カード登録</h1>
-  </div><br>
-  <div class='form-wrap'>
-    <%= f.label :number, "【カード番号】" %>
+<%= render "shared/second-header" %>
+
+<%= form_with  url: cards_path, id: 'charge-form',  class: 'registration-main',local: true do |f| %>
+<div class='form-wrap'>
+  <div class="form-header">
+    <h1 class='form-header-text'>
+    カード登録
+    </h1>
+  </div>
+  <div class='form-group'>
+    <div class='form-text-wrap'>
+      <label class="form-text">【カード番号】</label>
+      <span class="indispensable">必須</span>
+    </div>
     <%= f.text_field :number, class:"number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
   </div>
-  <div class='form-wrap'>
-    <%= f.label :cvc ,"【ＣＶＣ】" %>
+  <div class='form-group'>
+    <div class='form-text-wrap'>
+      <label class="form-text">【ＣＶＣ】</label>
+      <span class="indispensable">必須</span>
+    </div>
     <%= f.text_field :cvc, class:"cvc", placeholder:"カード背面にある3桁の番号", maxlength:"4" %>
   </div>
-  <div class='form-wrap'>
-  <br>
-    <p>【有効期限】</p>
+  <div class='form-group'>
+    <div class='form-text-wrap'>
+      <label class="form-text">【有効期限】</label>
+      <span class="indispensable">必須</span>
+    </div>
     <div class='input-expiration-date-wrap'>
       <%= f.select :exp_month, 1..12, {include_blank: "---"}, class: "exp_month" %>
       <p>月</p>
@@ -20,5 +33,10 @@
       <p>年</p>
     </div>
   </div>
-  <%= f.submit "登録する" , class:"button" %>
+  <div class='register-btn'>
+    <%= f.submit "登録する" ,class:"register-red-btn", id:"card_register" %>
+  </div>
+</div>
 <% end %>
+
+<%= render "shared/second-footer" %>
