--- a/app/assets/stylesheets/celeb/show.css
+++ b/app/assets/stylesheets/celeb/show.css
@@ -4,37 +4,35 @@
   height: 500px;
 }
 
+
 .left-bar-1{
   width: 35vw;
   background-color:  #00bfff;
   overflow-y: scroll;
   overflow-x: hidden;
+  border-radius: 18px;
 }
-
-.right-bar-1{
-  width: 35vw;
-  background-color: #87cefa;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  flex-wrap: wrap;
-}
-
 .user-show-profile-1{
   display: flex;
   align-items: center;
   padding: 30px 0 0 60px;
 }
-
 .user-show-img-1{
   border-radius: 50%;
   height: 80px;
   width: 80px;
 }
-
 .user-name-1{
   margin-left: 20px;
+  margin-right: 40px;
 }
-
+.user-show-profile-1 .total-price .title{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.user-show-profile-1 .total-price .price{
+  font-size: 20px;
+}
 .left-bar-1 h2{
   margin: 30px 0 40px 60px;
   position: relative;
@@ -44,8 +42,8 @@
   font-weight: bold;
   font-size: 20px;
   margin: 2em 0;
+  border-radius: 18px;
 }
-
 .left-bar-1 h2:after {
   position: absolute;
   content: '';
@@ -57,7 +55,16 @@
   height: 0;
 }
 
-.chat-history-1{
+
+.right-bar-1{
+  width: 35vw;
+  background-color: #87cefa;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  flex-wrap: wrap;
+  border-radius: 18px;
+}
+.right-bar-1 h2{
   position: relative;
   padding: 0.5em 0.7em;
   margin: 2em 0;
@@ -65,9 +72,9 @@
   color: #5c98d4;
   font-weight: bold;
   font-size: 20px;
+  border-radius: 18px;
 }
-
-.chat-history-1:after {
+.right-bar-1 h2:after {
   position: absolute;
   content: '';
   top: 100%;
@@ -77,49 +84,45 @@
   width: 0;
   height: 0;
 }
-
-.celeb-show-main-1{
-  width: 100%;
-  background-color: #66cfff;
-  background-size: cover;
-  padding: 5vh 20vw;
-  height: 500px;
-}
-
-.celeb-show-content-1{
-  margin-bottom: 50px;
-}
-
-.celeb-profile-1{
-  display: flex;
-}
-
-.celeb-show-name-1{
-  margin-left: 30px;
-  font-size: 30px;
-  padding-top: 30px;
-}
-
 .user-comment-list-1{
   margin: 0 0 5vh 5vw;
 }
-
 .user-comment-1{
   display: flex;
   align-items: center;
 }
-
 .chat-room-name{
   margin: 0 10px;
   text-decoration: none;
 }
-
 .chat-room-name-1:hover{
   color: blue;
   text-decoration:underline;
 }
 
+
 .block-user-1{
   width: 30vw;
   background-color: #4682b4;
+  border-radius: 18px;
+}
+.block-user-1 h2{
+  position: relative;
+  padding: 0.5em 0.7em;
+  margin: 2em 0;
+  background: #e6f4ff;
+  color: #5c98d4;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 18px;
+}
+.block-user-1 h2:after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 30px;
+  border: 15px solid transparent;
+  border-top: 15px solid #e6f4ff;
+  width: 0;
+  height: 0;
 }
