お問い合わせ機能の実装

--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -2,7 +2,7 @@
   <h1>お問い合わせ</h1>
 </div>
 
-<%= form_for @inquiry, :url => inquiry_thanks_path do |f| %>
+<%= form_for @inquiry, :url => thanks_inquiry_index_path do |f| %>
   <table class="table">
     <tr>
       <th>名前</th>
