--- a/app/views/inquiry/index.html.erb
+++ b/app/views/inquiry/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @inquiry, :url => inquiry_confirm_path do |f| %>
+<%= form_for @inquiry, :url => confirm_inquiry_index_path do |f| %>
   <div class="page-header">
     <h1>お問い合わせ</h1>
   </div>
