お問い合わせ画面の装飾

--- a/app/views/inquiry/index.html.erb
+++ b/app/views/inquiry/index.html.erb
@@ -1,32 +1,41 @@
-<%= form_for @inquiry, :url => confirm_inquiry_index_path do |f| %>
-  <div class="page-header">
-    <h1>お問い合わせ</h1>
-  </div>
+<%= render "shared/second-header" %>
 
-  <% if @inquiry.errors.any? %>
-    <div class="alert alert-danger" role="alert">
-      <strong>入力内容にエラーがあります</strong>
-      <ul>
-        <% @inquiry.errors.each do |attr, msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+<%= form_for @inquiry, url: confirm_inquiry_index_path do |f| %>
+  <div class= "inquiry-form">
+    <div class='container'>
+      <div class="head">
+        <h2>お問い合わせ</h2>
+      </div>
+      <% if @inquiry.errors.any? %>
+        <div class="alert alert-danger" role="alert">
+          <strong>入力内容にエラーがあります</strong>
+          <ul>
+            <% @inquiry.errors.each do |attr, msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <% if current_user %>
+        <%= f.text_field :name, value: @user_full_name, class:"text",placeholder: "Name"%>
+        <br/>
+        <%= f.text_field :email, value: current_user.email, class: "text",placeholder: "Email" %>
+        <br/>
+        <%= f.text_area :message, class: "text area", placeholder: "Message" %>
+        <br/>
+        <%= f.submit '確認', class: 'btn-primary' %>
+      <% else %>
+        <%= f.text_field :name, value: current_celeb.name, class:"text",placeholder: "Name"%>
+        <br/>
+        <%= f.text_field :email, value: current_celeb.email, class: "text",placeholder: "Email" %>
+        <br/>
+        <%= f.text_area :message, class: "text area", placeholder: "Message" %>
+        <br/>
+        <%= f.submit '確認', class: 'btn-primary' %>
+      <% end %>
     </div>
-  <% end %>
-
-  <table class="table">
-    <tr>
-      <th>名前<span class="text-danger">（必須）</span></th>
-      <td><%= f.text_field :name %></td>
-    </tr>
-    <tr>
-      <th>メールアドレス<span class="text-danger">（必須）</span></th>
-      <td><%= f.text_field :email %></td>
-    </tr>
-    <tr>
-      <th>お問い合わせ内容</th>
-      <td><%= f.text_area :message %></td>
-    </tr>
-  </table>
-  <%= f.submit '確認', class: 'btn btn-primary' %>
+  </div>
 <% end %>
+
+<%= render "shared/second-footer" %>
+
