--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -1,30 +1,20 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
-</div>
+<%= render "shared/second-header" %>
 
 <%= form_for @inquiry, :url => thanks_inquiry_index_path do |f| %>
-  <table class="table">
-    <tr>
-      <th>名前</th>
-      <td>
-        <%= f.hidden_field :name %>
-        <%= @inquiry.name %>
-      </td>
-    </tr>
-    <tr>
-      <th>メールアドレス</th>
-      <td>
-        <%= f.hidden_field :email %>
-        <%= @inquiry.email %>
-      </td>
-    </tr>
-    <tr>
-      <th>お問い合わせ内容</th>
-      <td>
-        <%= f.hidden_field :message %>
-        <%= simple_format(@inquiry.message) %>
-      </td>
-    </tr>
-  </table>
-  <%= f.submit '送信', :class => 'btn btn-primary' %>
+  <div class= "inquiry-form">
+    <div class='container'>
+      <div class="head">
+        <h2>お問い合わせ</h2>
+      </div>
+      <%= f.text_field :name, value: @inquiry.name, class:"text",placeholder: "Name"%>
+      <br/>
+      <%= f.text_field :email, value: @inquiry.email, class: "text",placeholder: "Email" %>
+      <br/>
+      <%= f.text_area :message, value: @inquiry.message, class: "text area", placeholder: "Message" %>
+      <br/>
+      <%= f.submit '送信', class: 'btn-primary' %>
+    </div>
+  </div>
 <% end %>
+
+<%= render "shared/second-footer" %>
