お問い合わせ完了画面の装飾

--- a/app/views/inquiry/thanks.html.erb
+++ b/app/views/inquiry/thanks.html.erb
@@ -1,6 +1,11 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
+<%= render "shared/second-header" %>
+<meta http-equiv="refresh" content=" 5; url=../">
+
+<div class="thank">
+  <h2>お問い合わせいただきありがとうございました。</h2>
+  <p>今後も弊社のアプリをお楽しみください。</p>
+  <p class="five-second"><span>5秒後</span>にトップページに自動遷移します</p>
 </div>
-<p>
-  お問い合わせいただきありがとうございました。
-</p>
+ 
+
+<%= render "shared/second-footer" %>
