inquiryコントローラーの編集

--- a/app/assets/stylesheets/room/show.scss
+++ b/app/assets/stylesheets/room/show.scss
@@ -38,11 +38,11 @@
 .faceicon1{
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
   width: 50vw;
   background-color: #fffaf0;
   border-radius: 5px;
-  padding-left: 220px;
 } 
 .faceicon1 .star{
   margin-right: 10px;
