--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -9,6 +9,7 @@
 }
 
 .form-wrap{
+  border-radius: 12px;
   width: 50%;
   background-color: #f0e68c;
   padding-bottom: 70px;
@@ -16,7 +17,6 @@
 
 .form-header{
   width: 100%;
-  height: 120px;
   text-align: center;
 }
 
