--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -19,7 +19,7 @@
 }
 
 .nav{
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -28,14 +28,17 @@
 }
 
 .lists-left{
-  display: flex;
   min-width: 200px;
+}
+
+.celeb-login{
+  display: flex;
   align-items: center;
 }
 
-.lists-right{
+.user-login{
   display: flex;
-  align-items: center
+  align-items: center; 
 }
 
 h1{
