--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,10 @@
           <%= link_to 'マイページ', celeb_path(@current_celeb), class: "login"%>
         <% else  %> 
           <h1>有名人の方はこちら</h1>
-          <%= link_to 'ログイン', new_second_celebs_path,class:"login" %>
+          <div class="celeb-login">
+            <%= link_to '有名人ゲストログイン（閲覧用）', new_guest_celeb_homes_path, method: :post, class:"login" %>
+            <%= link_to 'ログイン', new_second_celebs_path,class:"login" %>
+          </div>
         <% end %>
       <% end %>
     </ul> 
@@ -25,9 +28,11 @@
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete , class:"login" %>
         <% else %>
           <h1>一般ユーザーの方はこちら</h1>
-          <%= link_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, method: :post, class:"login" %>
-          <%= link_to '新規登録', new_user_registration_path , class:"login" %>
-          <%= link_to 'ログイン', user_session_path, method: :post, class: "login" %>
+          <div class="user-login">
+            <%= link_to '一般ユーザーゲストログイン（閲覧用）', new_guest_user_homes_path, method: :post, class:"login" %>
+            <%= link_to '新規登録', new_user_registration_path , class:"login" %>
+            <%= link_to 'ログイン', user_session_path, method: :post, class: "login" %>
+          </div>
         <% end %>
       <% end %>
     </ul>
