--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -111,12 +111,13 @@
 }
 /* //Sunnyが選ばれる3つの理由部分 */
 
+/* 有名人一覧部分 */
 .famous-index{
   padding: 5vh 0 5vh 3vw;
   color: white;
   background-color: #97d5fc;
-  overflow-y: scroll;
-  height: 500px;
+  // overflow-y: scroll;
+  // height: 500px;
 }
 
 .famous-index>.title{
@@ -165,4 +166,127 @@
 .celeb-name:hover{
   color: blue;
   text-decoration: underline;
+}
+
+/* //有名人一覧部分 */
+
+// 有名人ランキング
+
+.celeb-ranking{
+  background-image: image-url('ranking.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-color: #4169e1;
+  height: 800px;
+  background-size: cover;
+  width: 100%;
+}
+
+.celeb-ranking h2{
+  padding-top: 25vh;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.celeb-ranking h2 {
+  position: relative;
+  width: 600px;
+  margin: 0 auto;
+}
+
+.celeb-ranking h2:before,
+.celeb-ranking h2:after {
+  position: absolute;
+  z-index: 0;
+  bottom: -10px;
+  display: block;
+  content: '';
+  width: 6px;
+  border: 1em solid #01779e;
+}
+
+.celeb-ranking h2:before {
+  left: -30px;
+  border-left-width: 15px;
+  border-left-color: transparent;
+}
+
+.celeb-ranking h2:after {
+  right: -30px;
+  border-right-width: 15px;
+  border-right-color: transparent;
+}
+
+.celeb-ranking h2 span {
+  position: relative;
+  z-index: 1;
+  display: block;
+  padding: 1rem 2rem;
+  color: black;
+  background: #1292bd;
+}
+
+.celeb-ranking h2 span:before,
+.celeb-ranking h2 span:after {
+  position: absolute;
+  bottom: -20px;
+  display: block;
+  width: 10px;
+  height: 10px;
+  content: '';
+  border-style: solid;
+  border-color: #097092 transparent transparent transparent;
+}
+
+.celeb-ranking h2 span:before {
+  left: 0;
+  border-width: 10px 0 0 10px;
+}
+
+.celeb-ranking h2 span:after {
+  right: 0;
+  border-width: 10px 10px 0 0;
+}
+.celeb-ranking .ranking-lists{
+  display: flex;
+  flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0 8vw ;
+}
+
+.celeb-ranking .ranking-list{
+  display: flex;
+  font-size: 30px;
+  width: 28vw;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+}
+
+.celeb-ranking .name{
+  padding: 0 30px;
+}
+
+.celeb-ranking .ranking-list.ranking-list:nth-child(1){
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 45px;
+}
+
+.celeb-ranking .ranking-list:nth-child(2){
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  font-size: 35px;
+}
+
+.celeb-ranking .ranking-list:nth-child(3){
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  font-size: 35px;
 }
