--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,12 @@
     </h1>
   </div>
 
-<%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
-<%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
+  <div class="sns-login">
+    <h2>SNSアカウントで新規登録</h2>
+    <%= link_to image_tag("facebook-login.png", class: "facebook-img"), user_facebook_omniauth_authorize_path, method: :post%>
+    <%= link_to image_tag("google-login.png", class: "google-img"), user_google_oauth2_omniauth_authorize_path, method: :post%>
+  </div>
+
   <%= render "shared/error_messages", model: f.object %>
 
   <div class="form-group">
