--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -117,7 +117,7 @@
   color: white;
   background-color: #97d5fc;
   // overflow-y: scroll;
-  // height: 500px;
+  // height: 100vh;
 }
 
 .famous-index>.title{
