--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -86,7 +86,7 @@
         </li>
       <% end %>  
     </ul>
-    <%= paginate @celebs %>
+    <div class='hidden'><%= paginate @celebs%></div> 
   </div>
 </div>
 
