--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,10 @@
     <%= csp_meta_tag %>
     <%= include_gon(init: true)%>
     <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
-    <%= stylesheet_link_tag 'application', media: 'all'%>
+    <%# <%= stylesheet_link_tag 'application', media: 'all'%> 
     <%= javascript_pack_tag 'application'%>
     <script src="https://js.pay.jp/" , type="text/javascript"></script>
-    <%# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'  %>
-    <%# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  %>
-    <%# <script src="https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"></script>  %>
   </head>
 
   <body>
