今までは部屋を同時に開いていたら違う部屋に対してもmessegaが飛んでいたものを修正

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -165,6 +165,7 @@
           <input id="current_user_id" type="hidden" value= "<%=@current_celeb.id%>">
           <input id="partner_id" type="hidden" value= "<%=@room.user.id%>">
         <% end %>
+          <input id="room_id" type="hidden" value= "<%=@room.id%>">
       </div>
     <% end %>
   </div>
