--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -121,7 +121,7 @@
             <%= link_to '削除する', room_message_path(@room,message), method: :delete, class: "delete-btn hidden", id: "destroy"%>
             <%= message.read ? '既読' : '  ' %>
             <%= l message.created_at, format: :short %>
-            <p id= 'mycomment'><%= message.content %></p>
+            <p class= 'my'><%= message.content %></p>
           </div>
         <% else %>
           <div class="fukidasi">
